Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-31309

The status variable Innodb_buffer_pool_read_requests is not updated correctly

    XMLWordPrintable

Details

    Description

      In MDEV-26827, some monitoring was changed.
      Some status variables were changed to point directly to the underlying variables, like this:

        {"buffer_pool_read_requests", &buf_pool.stat.n_page_gets, SHOW_SIZE_T},
      

      Unlike all other variables in buf_pool.stat this particular one is divided into shards for performance reasons (MDEV-21212). So, the status variable would only reflect the contents of the first shard and not the entire counter. Thanks to dragle for noticing this.

      Note: This counter is inaccurate by design. If we protected it correctly, it would introduce a performance bottleneck.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.25h
                  0.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.