MDEV-31309 Innodb_buffer_pool_read_requests is not updated correctly

srv_export_innodb_status(): Update
export_vars.innodb_buffer_pool_read_requests as it was done
before commit a55b951e6082a4ce9a1f2ed5ee176ea7dbbaf1f2 (MDEV-26827).
If innodb_status_variables[] pointed to a sharded variable, it would
only access the first shard.